--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "mp1",
+  "name": "linspace",
   "version": "1.0.0",
-  "description": "CS498RK MP1",
+  "description": "Lin's personal website",
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider; webpack-dev-server",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; webpack"
+  "start": "webpack serve",
+  "build": "webpack"
   },
-  "author": "UIUC Web Programming Staff",
+  "author": "Lin Kim",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.0",
